<!--
  ~ Copyright 2012 Manh Luong   Bui
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~  http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_settings_weight"
        android:title="@string/menu_settings_weight"
        android:orderInCategory="100"
        android:showAsAction="never"/>
    <item android:id="@+id/menu_settings_range"
        android:title="@string/menu_settings_range"
        android:orderInCategory="101"
        android:showAsAction="never"/>
    <item android:id="@+id/menu_settings_radius"
        android:title="@string/menu_settings_radius"
        android:orderInCategory="102"
        android:showAsAction="never"/>
    <item android:id="@+id/menu_settings_boid_num"
        android:title="@string/menu_settings_boid_num"
        android:orderInCategory="103"
        android:showAsAction="never"/>
    <item android:id="@+id/menu_settings_fps"
        android:title="@string/menu_settings_fps"
        android:orderInCategory="109"
        android:showAsAction="never"/>
    <item android:id="@+id/menu_settings_about"
        android:title="@string/menu_settings_about"
        android:orderInCategory="110"
        android:showAsAction="ifRoom"/>
</menu>