<!--
  ~ Copyright 2012 Manh Luong   Bui
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~  http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <LinearLayout
       android:padding="5dp"
       android:orientation="vertical"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content">
    
       <TextView
          android:padding="3dp"
          android:textSize="17sp"
          android:layout_marginBottom="5dp"
          android:background="@android:color/background_dark"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/apache_license"/>
       
       <TextView
          android:padding="3dp"
          android:textSize="17sp"
          android:layout_marginBottom="5dp"
          android:background="@android:color/background_dark"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/about_description"/>
       
       <Button android:id="@+id/github_btn"
          android:padding="3dp"
          android:textSize="17sp"
          android:layout_marginBottom="5dp"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/about_github_btn"/>
       
       <Button android:id="@+id/blog_btn"
          android:padding="2dp"
          android:textSize="17sp"
          android:layout_marginBottom="5dp"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/about_blog_btn"/>
    
       <TextView
          android:padding="3dp"
          android:textSize="17sp"
          android:background="@android:color/background_dark"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/about_versioning"/>
    
    </LinearLayout>
    
</ScrollView>